--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "./",
-  "scope": ".",
+  "start_url": "type-away/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
